# test_gpu_deflection

./: .gitignore  Cargo.toml  TODO.md  lib.rs
kernels/: Cargo.toml
kernels/src/: butcher.rs  dop_54.rs  dopr54.rs  force.rs  lib.rs  orbit.rs  potential.rs
src/: coff.rs  main.rs  plot.py  plot_potentials.py  precompute_spherical.rs  sciii.py
