[package]
name = "mytest"
version = "0.1.0"
edition = "2024"

[dependencies]
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", package = "cust", branch = "main" }
nanorand = "0.7"

[build-dependencies]
cuda_builder = { git = "https://github.com/Rust-GPU/Rust-CUDA", package = "cuda_builder", branch = "main" }