[package]
name = "test_gpu_deflection-gemm-kernels"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda_std = { git = "https://github.com/Rust-GPU/Rust-CUDA", package = "cuda_std", branch = "main" }
glam = { version = "0.30.1", default-features = false, features = ["cuda", "nostd-libm"] }
libm = "0.2.11"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]